# forgeai-rs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/forgeai/: Cargo.toml  README.md
crates/forgeai-adapter-anthropic/: Cargo.toml  README.md
crates/forgeai-adapter-anthropic/src/: lib.rs
crates/forgeai-adapter-gemini/: Cargo.toml  README.md
crates/forgeai-adapter-gemini/src/: lib.rs
crates/forgeai-adapter-openai/: Cargo.toml  README.md
crates/forgeai-adapter-openai/src/: lib.rs
crates/forgeai-core/: Cargo.toml  README.md
crates/forgeai-core/src/: lib.rs
crates/forgeai-gateway/: Cargo.toml  README.md
crates/forgeai-gateway/src/: lib.rs
crates/forgeai-observability/: Cargo.toml  README.md
crates/forgeai-observability/src/: lib.rs
crates/forgeai-replay/: Cargo.toml  README.md
crates/forgeai-replay/src/: lib.rs
crates/forgeai-router/: Cargo.toml  README.md
crates/forgeai-router/src/: lib.rs
crates/forgeai-schema/: Cargo.toml  README.md
crates/forgeai-schema/src/: lib.rs
crates/forgeai-stream/: Cargo.toml  README.md
crates/forgeai-stream/src/: lib.rs
crates/forgeai-tools/: Cargo.toml  README.md
crates/forgeai-tools/src/: lib.rs
crates/forgeai/src/: lib.rs
docs/adr/: 0001-clean-room-migration.md
docs/architecture/: overview.md  roadmap.md
examples/failover-router/: Cargo.toml
examples/failover-router/src/: main.rs
examples/quickstart/: Cargo.toml
examples/quickstart/src/: main.rs
examples/streaming/: Cargo.toml
examples/streaming/src/: main.rs
examples/structured-output/: Cargo.toml
examples/structured-output/src/: main.rs
examples/tool-loop/: Cargo.toml
examples/tool-loop/src/: main.rs
examples/tools/: Cargo.toml
examples/tools/src/: main.rs
