[workspace]
members = [
  "crates/forgeai",
  "crates/forgeai-core",
  "crates/forgeai-stream",
  "crates/forgeai-tools",
  "crates/forgeai-schema",
  "crates/forgeai-adapter-openai",
  "crates/forgeai-adapter-anthropic",
  "crates/forgeai-adapter-gemini",
  "crates/forgeai-router",
  "crates/forgeai-observability",
  "crates/forgeai-replay",
  "crates/forgeai-gateway",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/viralkachhadiya/forgeai-rs"
homepage = "https://github.com/viralkachhadiya/forgeai-rs"
documentation = "https://docs.rs/forgeai"
rust-version = "1.76"

[workspace.dependencies]
async-trait = "0.1"
futures-core = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
