[package]
name = "forgeai-adapter-openai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/forgeai-adapter-openai"
description = "OpenAI adapter for forgeai-rs"
keywords = ["openai", "ai", "llm"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
async-stream = "0.3"
async-trait.workspace = true
forgeai-core = { path = "../forgeai-core", version = "0.1.0" }
futures-core.workspace = true
futures-util = "0.3"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock = "0.6"
