[package]
name = "forgeai-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/forgeai-core"
description = "Core types and traits for forgeai-rs"
keywords = ["ai", "llm", "sdk", "genai"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
async-trait.workspace = true
futures-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
