[package]
name = "forgeai-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/forgeai-observability"
description = "Observability helpers for forgeai-rs"
keywords = ["tracing", "metrics", "otel"]
categories = ["development-tools::debugging"]

[dependencies]
tracing.workspace = true
