[package]
name = "forgeai-replay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/forgeai-replay"
readme = "README.md"
description = "Record/replay test harness for forgeai-rs"
keywords = ["testing", "replay", "ai"]
categories = ["development-tools::testing"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
