[package]
name = "forgeai-router"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/forgeai-router"
description = "Routing and fallback policies for forgeai-rs"
keywords = ["routing", "fallback", "ai"]
categories = ["algorithms", "asynchronous"]

[dependencies]
async-trait.workspace = true
forgeai-core = { path = "../forgeai-core", version = "0.1.0" }

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
